Add first icon link in footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!--Meta tags for search engines-->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands in pheonix park">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands in pheonix park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -29,14 +31,21 @@
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Sign up</a></li>
             </ul>
-    </nav>
+        </nav>
     </header>
 
     <!--Main content-->
     <main>Main Content</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
-
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+    <!--Font aewsome kit link-->
+    <script src="https://kit.fontawesome.com/2d15dd04c5.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
