Add remaining footer icons and navigation icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">x</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -41,8 +41,17 @@
     <footer>
         <ul>
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li><a href="https://x.com/?lang=en" target="_blank" rel="noopener"
+                    aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our youtube (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a></li>
         </ul>
+
     </footer>
     <!--Font aewsome kit link-->
     <script src="https://kit.fontawesome.com/2d15dd04c5.js" crossorigin="anonymous"></script>
