--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,42 @@
     </header>
 
     <!--Main content-->
-    <main>Main Content</main>
+    <main>
+        <section id="signup">
+            <form action="" id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2>
+                    <i class="fa-solid fa-heart-pulse"></i>Let's get you signed up!
+                </h2>
+                <label for="first-name">First Name</label>
+                <input type="text" id="first-name">
+                
+                <br>
+                <label for="last-name">Last Name</label>
+                <input type="text" id="last-name">
+                
+                <br>
+                <label for="email-address">Email Address</label>
+                <input type="text" id="email-address">
+
+                <div id="radio-buttons">
+                    <div>
+                        <label for="road">Road</label>
+                        <input type="radio" id="road" name="running_preference">
+                    </div>
+                    <div>
+                        <label for="trail">Trail</label>
+                        <input type="radio" id="trail" name="running_preference">
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" id="both" name="running_preference">
+                    </div>
+                </div>
+                <input type="submit" class="join-button">
+            </form>
+        </section>
+
+    </main>
 
     <!--Footer-->
     <footer>
