--- a/signup.html
+++ b/signup.html
@@ -3,93 +3,102 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Title-->
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- Title -->
     <title>Love Running</title>
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <!--Meta tags for search engines-->
-    <meta name="description"
-        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands in pheonix park">
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
-    <!--Stylesheet-->
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <!--Header-->
+    <!-- Header -->
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html" class="active">Sign up</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
     </header>
 
-    <!--Main content-->
+    <!-- Main content -->
     <main>
         <section id="signup">
-            <form action="" id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
-                <h2>
-                    <i class="fa-solid fa-heart-pulse"></i>Let's get you signed up!
-                </h2>
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2><i class="fa-solid fa-heartbeat"></i> Let's get you signed up!</h2>
                 <label for="first-name">First Name</label>
-                <input type="text" id="first-name">
-                
+                <input type="text" name="first_name" id="first-name" class="text-input" required>
                 <br>
                 <label for="last-name">Last Name</label>
-                <input type="text" id="last-name">
-                
+                <input type="text" name="last_name" id="last-name" class="text-input" required>
                 <br>
                 <label for="email-address">Email Address</label>
-                <input type="text" id="email-address">
-
-                <div id="radio-buttons">
+                <input type="email" name="email_address" id="email-address" class="text-input" required>
+                <br>
+                <div class="radio-buttons">
                     <div>
                         <label for="road">Road</label>
-                        <input type="radio" id="road" name="running_preference">
+                        <input type="radio" name="running_preference" id="road" value="road" required checked>
                     </div>
                     <div>
                         <label for="trail">Trail</label>
-                        <input type="radio" id="trail" name="running_preference">
+                        <input type="radio" name="running_preference" id="trail" value="trail" required>
                     </div>
                     <div>
                         <label for="both">Both</label>
-                        <input type="radio" id="both" name="running_preference">
+                        <input type="radio" name="running_preference" id="both" value="both" required>
                     </div>
                 </div>
-                <input type="submit" class="join-button">
+                <button type="submit" class="join-button">Let's Run!</button>
             </form>
         </section>
-
     </main>
 
-    <!--Footer-->
+    <!-- Footer -->
     <footer>
         <ul id="social-networks">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
             </li>
-            <li><a href="https://x.com/?lang=en" target="_blank" rel="noopener"
-                    aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="https://youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our youtube (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
-            <li><a href="https://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a></li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
         </ul>
-
     </footer>
-    <!--Font aewsome kit link-->
-    <script src="https://kit.fontawesome.com/2d15dd04c5.js" crossorigin="anonymous"></script>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
